--- a/public/template/front/assets/scss/_variabls.scss
+++ b/public/template/front/assets/scss/_variabls.scss
@@ -21,7 +21,7 @@ $footer-color: #222;
 $heading-color: #222;
 
 // Theme Color
-$theme-color: #ff5151;
+$theme-color: #EE4D2D;
 $theme-color-2: #19cfa3;
 $theme-color-3: #f1f1ff;
 
